# proptimus-raphan

./: Dockerfile  Dockerfile-conda  README.md  environment.yml  pyproject.toml  raphan.py
comparison_scripts/: compare_atoms_position.py  compare_biological_dihedral_angles.py  compare_bond_angles.py  compare_bond_lengths.py  compare_dihedral_angles.py  compare_times.py
